--- a/templates/Front/Inline/Product/detailAvailability.html.twig
+++ b/templates/Front/Inline/Product/detailAvailability.html.twig
@@ -47,7 +47,7 @@
 
 
 {% if variants|length > 0 or product.variants|length > 0 %}
-    <div class="box-detail__availability js-product-variant-detail-select-info">
+    <div class="box-detail__availability">
         <span class="box-detail__availability__status">
             <span class="box-detail__availability__date">
                 {{ 'Skladem, ihned k odeslání'|trans }}
