Changed stores to work more like stocks.

--- a/templates/Admin/Content/Store/detail.html.twig
+++ b/templates/Admin/Content/Store/detail.html.twig
@@ -1,7 +1,7 @@
 {% extends '@ShopsysFramework/Admin/Layout/layoutWithPanel.html.twig' %}
 
-{% block title %}- {{ 'Store detail'|trans }}{% endblock %}
-{% block h1 %}{{ 'Store detail'|trans }}{% endblock %}
+{% block title %}- {{ 'Podrobnosti o skladu/prodejně'|trans }}{% endblock %}
+{% block h1 %}{{ 'Podrobnosti o skladu/prodejně'|trans }}{% endblock %}
 
 {% block main_content %}
 
