--- a/templates/Admin/Content/Store/edit.html.twig
+++ b/templates/Admin/Content/Store/edit.html.twig
@@ -1,7 +1,7 @@
 {% extends 'Admin/Content/Store/detail.html.twig' %}
 
-{% block title %}- {{ 'Editing store'|trans }} - {{ store.name }}{% endblock %}
+{% block title %}- {{ 'Úprava skladu/prodejny'|trans }} - {{ store.name }}{% endblock %}
 {% block h1 %}
-    {{ 'Editing store'|trans }} - {{ store.name }}
+    {{ 'Úprava skladu/prodejny'|trans }} - {{ store.name }}
 
 {% endblock %}
