--- a/templates/Admin/Content/Store/list.html.twig
+++ b/templates/Admin/Content/Store/list.html.twig
@@ -1,12 +1,12 @@
 {% extends '@ShopsysFramework/Admin/Layout/layoutWithPanel.html.twig' %}
 
-{% block title %}- {{ 'Stores overview'|trans }}{% endblock %}
-{% block h1 %}{{ 'Stores overview'|trans }}{% endblock %}
+{% block title %}- {{ 'Sklady a prodejny'|trans }}{% endblock %}
+{% block h1 %}{{ 'Sklady a prodejny'|trans }}{% endblock %}
 
 {% block btn %}
     <a href="{{ url('admin_store_new') }}" class="btn btn--plus wrap-bar__btn">
         <i class="btn__icon">+</i>
-        {{ 'Create new store'|trans }}
+        {{ 'Vytvořit nový sklad/prodejnu'|trans }}
     </a>
 {% endblock %}
 
