--- a/templates/Admin/Content/Store/listGrid.html.twig
+++ b/templates/Admin/Content/Store/listGrid.html.twig
@@ -1,7 +1,7 @@
 {% extends '@ShopsysFramework/Admin/Grid/Grid.html.twig' %}
 
 {% block grid_no_data %}
-    {{ 'No stores found.'|trans }}
+    {{ 'Žádné sklady ani prodejny nebyly nalezeny'|trans }}
 {% endblock %}
 
 {% block grid_pager_totalcount %}
