--- a/templates/Admin/Content/Store/new.html.twig
+++ b/templates/Admin/Content/Store/new.html.twig
@@ -1,4 +1,4 @@
 {% extends 'Admin/Content/Store/detail.html.twig' %}
 
-{% block title %}- {{ 'New store'|trans }}{% endblock %}
-{% block h1 %}{{ 'New store'|trans }}{% endblock %}
+{% block title %}- {{ 'Nový sklad/prodejna'|trans }}{% endblock %}
+{% block h1 %}{{ 'Nový sklad/prodejna'|trans }}{% endblock %}
