--- a/templates/Admin/Form/storeStockFields.html.twig
+++ b/templates/Admin/Form/storeStockFields.html.twig
@@ -3,8 +3,8 @@
         <table class="table-form">
             <thead>
             <tr class="table-form__row">
-                <th class="table-form__cell">{{ 'Store'|trans }}</th>
-                <th class="table-form__cell">{{ 'on stock'|trans }}</th>
+                <th class="table-form__cell">{{ 'Název skladu'|trans }}</th>
+                <th class="table-form__cell">{{ 'Počet kusů'|trans }}</th>
             </tr>
             </thead>
 
@@ -25,7 +25,7 @@
         <table class="table-form">
             <thead>
             <tr class="table-form__row">
-                <th class="table-form__cell">{{ 'Neexistují žádné prodejny'|trans }}</th>
+                <th class="table-form__cell">{{ 'Žádné sklady nebyly nalezeny'|trans }}</th>
             </tr>
             </thead>
         </table>
