--- a/templates/Front/Content/Cart/index.html.twig
+++ b/templates/Front/Content/Cart/index.html.twig
@@ -85,12 +85,16 @@
                                                 </div>
                                             </div>
                                             <div class="table-cart__row__right">
-                                                <div class="table-cart__cell__spinbox">
+                                                <div class="table-cart__cell__spinbox js-spinbox-parent">
+                                                    <div class="in-message in-message--warning js-maximum-amount-warning display-none">
+                                                        {{ 'Větší množství není možné nakoupit'|trans }}
+                                                    </div>
                                                     <span class="form-input-spinbox js-spinbox">
                                                         {{ form_widget(form.quantities[cartItem.id], { attr: {
                                                             class: 'form-input-spinbox__input input-no-style js-spinbox-input',
                                                             'data-spinbox-min': cartItem.product.realMinimumAmount,
-                                                            'data-spinbox-step': cartItem.product.amountMultiplier
+                                                            'data-spinbox-step': cartItem.product.amountMultiplier,
+                                                            'data-spinbox-max': cartItem.product.realStockQuantity
                                                         }}) }}
                                                         <div class="btn-no-style form-input-spinbox__btn js-spinbox-plus"><i class="svg svg-plus"></i></div>
                                                         <div class="btn-no-style form-input-spinbox__btn form-input-spinbox__btn--minus js-spinbox-minus"><i class="svg svg-minus"></i></div>
