--- a/templates/Front/Inline/Cart/productAction.html.twig
+++ b/templates/Front/Inline/Cart/productAction.html.twig
@@ -10,11 +10,22 @@
     </a>
 {% else %}
     {{ form_start(form, {attr: {class: 'js-add-product dont-print', 'data-ajax-url': url('front_cart_add_product_ajax'), 'multipleForm': true}}) }}
-    <span class="form-input-spinbox js-spinbox">
-        {{ form_widget(form.quantity, { attr: { class: 'form-input-spinbox__input input-no-style js-spinbox-input', 'data-spinbox-min': 1}}) }}
-        <button type="button" class="btn-no-style form-input-spinbox__btn js-spinbox-plus">+</button>
-        <button type="button" class="btn-no-style form-input-spinbox__btn form-input-spinbox__btn--minus js-spinbox-minus">-</button>
-    </span>
-    {{ form_widget(form.add, {label: 'Add to cart'|trans, attr: { class: 'btn--success' ~ buttonSizeClass }}) }}
+    <div class="box-detail-add__action{% if type == 'small' %} box-detail-add__action--in-product-list{% endif %}">
+        <div class="box-detail-add__action__spinbox">
+            <span class="form-input-spinbox{% if type == 'small' %} form-input-spinbox--small{% endif %} js-spinbox">
+                {{ form_widget(form.quantity, { attr: { class: 'form-input-spinbox__input input-no-style js-spinbox-input', 'data-spinbox-min': productActionView.minimumAmount, 'data-spinbox-step': productActionView.amountMultiplier } }) }}
+                <button type="button" class="btn-no-style form-input-spinbox__btn js-spinbox-plus"><i class="svg svg-plus"></i></button>
+                <button type="button" class="btn-no-style form-input-spinbox__btn form-input-spinbox__btn--minus js-spinbox-minus"><i class="svg svg-minus"></i></button>
+            </span>
+        </div>
+
+        {% if type == 'large' %}
+            {{ form_widget(form.add, {label: '<i class="svg svg-cart"></i>Přidat do košíku'|trans, attr: {class: 'box-detail-add__action__button btn--success btn--large' }}) }}
+        {% elseif type == 'small' %}
+            {{ form_widget(form.add, {label: '<i class="svg svg-cart"></i>Přidat do košíku'|trans, attr: {class: 'box-detail-add__action__button btn--success' }}) }}
+        {% else %}
+            {{ form_widget(form.add, {label: 'Přidat do košíku'|trans, attr: {class: 'box-detail-add__action__button btn--success btn--full-width' }}) }}
+        {% endif %}
+    </div>
     {{ form_end(form) }}
 {% endif %}
