--- a/src/Resources/styles/front/common/components/table/cart.less
+++ b/src/Resources/styles/front/common/components/table/cart.less
@@ -158,7 +158,7 @@
         &--promo {
             margin-top: @table-cart-gift-white-space;
             padding: 0;
-            
+
             border-bottom: 0;
         }
 
@@ -168,6 +168,30 @@
             &:last-child {
                 margin-bottom: 0;
             }
+        }
+    }
+
+    &__order-gifts {
+        display: flex;
+        flex-direction: column;
+        padding: 30px 0 15px;
+
+        border-bottom: 3px solid @color-light;
+
+        @media @query-lg {
+            flex-direction: row;
+        }
+    }
+
+    &__next-gifts {
+        padding: 30px 0 15px;
+
+        border-bottom: 3px solid @color-light;
+
+        &__title {
+            margin: 0 0 20px;
+
+            font-weight: 700;
         }
     }
 }
