--- a/src/Resources/styles/front/common/main.less
+++ b/src/Resources/styles/front/common/main.less
@@ -93,10 +93,12 @@
 @import "components/list/categories.less";
 @import "components/list/cart-preview.less";
 @import "components/list/menu.less";
+@import "components/list/next-gifts.less";
 @import "components/list/images.less";
 @import "components/list/grid-images.less";
 @import "components/list/languages.less";
 @import "components/list/last-visited.less";
+@import "components/list/order-gifts.less";
 @import "components/list/params.less";
 @import "components/list/pickup-place.less";
 @import "components/list/products.less";
