--- a/templates/Front/Content/Product/boxDetail.html.twig
+++ b/templates/Front/Content/Product/boxDetail.html.twig
@@ -71,7 +71,18 @@
                 </h2>
 
                 <div class="box-detail__info__code">
-                    {{ 'Kód produktu'|trans }}: {{ product.catnum }}
+                    <span class="padding-right-10">
+                        {{ 'Kód produktu'|trans }}: {{ product.catnum }}
+                    </span>
+                {% if product.brand %}
+                    |
+                    <span class="padding-left-10">
+                        {{ 'Brand'|trans }}:
+                        <a href="{{ url('front_brand_detail', { id: product.brand.id }) }}">
+                            <span itemprop="brand">{{ product.brand.name }}</span>
+                        </a>
+                    </span>
+                {% endif %}
                 </div>
 
                 <div class="box-detail__wrap">
