--- a/src/Resources/styles/front/common/main.less
+++ b/src/Resources/styles/front/common/main.less
@@ -82,6 +82,7 @@
 
 //// list
 @import "components/list/accessories-products.less";
+@import "components/list/addresses.less";
 @import "components/list/articles.less";
 @import "components/list/articles-blog.less";
 @import "components/list/article-main.less";
