FE: display newsletter subscription form in footer

--- a/templates/Front/Layout/footer.html.twig
+++ b/templates/Front/Layout/footer.html.twig
@@ -6,6 +6,7 @@
             <div class="web__line">
                 <div class="web__container web__container--dark web__container--border-radius-bottom">
                     <div class="footer-top">
+                        {{ render(controller('App\\Controller\\Front\\NewsletterController:subscriptionAction')) }}
                         <div class="footer-top__info">
                             <div class="footer-top__socials">
                                 <ul class="list-socials">
