--- a/templates/Front/Inline/Newsletter/subscription.html.twig
+++ b/templates/Front/Inline/Newsletter/subscription.html.twig
@@ -2,18 +2,18 @@
     <div class="footer__newsletter">
         <div class="footer__newsletter__text">
             <p>
-                {{ 'Do you want to receive the newest information about our shop? Subscribe to our e-mail newsletter.'|trans }}
+                {{ 'Nenechte si ujít akční nabídky'|trans }}
             </p>
         </div>
         <div class="footer__newsletter__form">
             <div class="footer__newsletter__form__wrap">
                 <div class="footer__newsletter__form__in">
-                    {{ form_widget(form.email, { attr: {placeholder: 'Enter e-mail'|trans, class: 'footer__newsletter__input'} }) }}
+                    {{ form_widget(form.email, { attr: {placeholder: 'Váš e-mail'|trans, class: 'footer__newsletter__input'} }) }}
                     {{ form_errors(form.email) }}
                 </div>
-                {{ form_widget(form.send, { label: 'Log in'|trans, attr: { class: "footer__newsletter__form__btn" }}) }}
+                {{ form_widget(form.send, { label: 'Přihlásit'|trans, attr: { class: "footer__newsletter__form__btn" }}) }}
             </div>
-            {{ form_errors(form, { errors_attr: { class : 'in-message--alert' } }) }}
+            {{ form_errors(form, { errors_attr: { class : 'in-message--alert display-none' } }) }}
             <div class="form-choice">
                 <div class="form-choice__input">
                     {{ form_widget(form.privacyPolicyAgreement) }}
@@ -30,6 +30,11 @@
                     <span class="js-validation-errors-list js-validation-error-list-{{ form.privacyPolicyAgreement.vars.id }} form-error form-error--choice display-none"><span class="form-error__icon"><i class="svg svg-warning"></i></span><ul class="form-error__list"></ul></span>
                 </div>
             </div>
+        </div>
+        <div class="footer__newsletter__text">
+            <p>
+                {{ 'Jednou za týden – novinky, akční nabídky i zákulisní informace'|trans }}
+            </p>
         </div>
     </div>
 {{ form_end(form) }}
