--- a/templates/Front/Inline/Cart/afterAddWindow.html.twig
+++ b/templates/Front/Inline/Cart/afterAddWindow.html.twig
@@ -4,8 +4,8 @@
         <div class="box-popup-add__content__title">
             <span class="box-popup-add__content__title__text double-lined">
                 {{ 'Do košíku přidáno %quantity%&nbsp;ks<br>celkem za %price%'|transHtml({
-                    '%quantity%': cartItem.quantity|formatNumber,
-                    '%price%': quantifiedItemPrice.totalPrice.priceWithVat|price
+                    '%quantity%': addedQuantity|formatNumber,
+                    '%price%': addedPrice|price
                 }) }}
             </span>
         </div>
